Typeahead position fixed -so no white space now

--- a/src/App.css
+++ b/src/App.css
@@ -458,6 +458,13 @@ a:-webkit-any-link {
   min-width: 200px;
   max-width: 250px;
   overflow: auto;
+  float: bottom;
+}
+
+.vendor-typeahead-position,
+.cat-typeahead-position{
+ position: absolute;
+ margin-bottom: 4px;
 }
 
 /* Admin/Vendor Portal */
